--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <meta name="msapplication-TileColor" content="#3385FF">
     <meta name="theme-color" content="#3385FF">
 
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/png/01d@2x.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/png/01d@2x.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/png/01d@2x.png">
+
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/screen.css">
 
