--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>Wheater History</title>
+    <title>Weather History</title>
     <meta name="description" content="This is my HTML5 boilerplate.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="msapplication-TileColor" content="#3385FF">
@@ -34,7 +34,7 @@
                     <img class="c-toggle-dayNight__icon" src="img/svg/night.svg">
                 </p>
                 <div class="c-weather">
-                    <p class="js-wheaterInfo"><img class="c-wheaterIcon js-wheaterIcon" src="img/svg/01d@2x.svg" /></p> 
+                    <p class="js-weatherInfo"><img class="c-weatherIcon js-weatherIcon" src="img/svg/01d@2x.svg" /></p> 
                 </div>
                 <form class="c-card-top js-form">
                     <div class="c-nav">
